--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -10,17 +10,31 @@
   
   .btn {
     @include mixins.button-general;
+
+    &.rounded-button {
+      border-radius: 10rem;
+    };
+
+    &.squared-button {
+      background-color: transparent;
+      border: 1px solid globals.$senda-color-white-100;
+      border-radius: 3px;
+    };
+
   };
 
   .btn__icon {
     @include mixins.flex-center;
-    padding: globals.$padding-general-012;
+    // padding: globals.$padding-general-010;
+    padding: 0;
     position: relative;
+    height: calc(100dvw * 0.0106 + globals.$padding-general-010);
+    width: calc(100dvw * 0.0106 + globals.$padding-general-010);
 
     img{
+      display: flex;
       object-fit: scale-down;
-      object-position: center;
-
+      // object-position: center;
     };
   };
 
