--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -15,7 +15,6 @@
   @include typography.desktop-buttons;  
   background-color: globals.$senda-color-white-50;
   border: 1px solid globals.$senda-color-white-300;
-  border-radius: 10rem;
   color: globals.$senda-color-black-100;
   padding: globals.$padding-general-006 globals.$padding-general-012;
 };
